# termpulse

./: LICENSE  README.md  pyproject.toml
termpulse/: __init__.py  __main__.py  app.py  app.tcss  collectors.py  widgets.py
tests/: test_collectors.py
