[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "termpulse"
version = "0.1.0"
description = "The convergent terminal dashboard. Ambient developer intelligence that adapts to your workflow."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "CodeTonight", email = "hello@codetonight.com"},
]
keywords = ["terminal", "tui", "dashboard", "developer-tools", "git", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.47.0",
    "psutil>=5.9.0",
    "rich>=13.0.0",
]

[project.scripts]
termpulse = "termpulse.__main__:main"
tp = "termpulse.__main__:main"

[project.urls]
Homepage = "https://github.com/CodeTonight-SA/termpulse"
Repository = "https://github.com/CodeTonight-SA/termpulse"
Issues = "https://github.com/CodeTonight-SA/termpulse/issues"
